<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <GVL Name="Global_Alarms" Id="{e7617498-7fbc-4eea-8b34-2d52f9d3df2c}">
    <Declaration><![CDATA[// Theseus - Global_Alarms
// Rev 1.0 - December 3, 2024

VAR_GLOBAL
	
	giAlarmCount														: INT		:= 0;
	gsAlarms															: ARRAY[0.._ALARM_COUNT] OF STRING;
	gsMessages															: ARRAY[0.._ALARM_COUNT] OF STRING;

	gsClampsNotExtendedError											: STRING	:= 'Clamps not extended';
	gsClampsNotRetractedError											: STRING	:= 'Clamps not retracted';
	gsDoorsNotSelectedError												: STRING	:= 'No doors were selected';
	gsGasketNotActivatedError											: STRING	:= 'Gasket not activated';
	gsInletDoorNotClosedError											: STRING	:= 'Inlet door not closed';
	gsInletDoorNotOpenError												: STRING	:= 'Inlet door not open';
	gsOutletDoorNotClosedError											: STRING	:= 'Outlet door not closed';
	gsOutletDoorNotOpenError											: STRING	:= 'Outlet door not open';
	gsPositivePressureError												: STRING	:= 'Reactor failed to reach positive pressure set point';
	gsReactorNotAtAmbientPressure										: STRING	:= 'Reactor not at ambient pressure';
	gsUnacceptableReactorLeakRate										: STRING	:= 'Unacceptable reactor positive pressure leak rate';
	gsRepressurizationValveError										: STRING	:= 'Repressurization valve error (XV02)';	

	
	gsAmbientPressureError												: STRING	:= 'Ambient pressure error';
	gsAdsorptionAcceptableButNotIdealTimeError							: STRING	:= 'Adsorption time to cool acceptable but not ideal';
	gsAdsorptionTimeOutError											: STRING	:= 'Adsorption - sorbent failed to cool';
	gsAdsorptionUnacceptableTimeError									: STRING	:= 'Adsorption time to cool unacceptable';
	gsAdsorptionInletCo2LowError										: STRING	:= 'Adsorption inlet co2 concentration low';
	gsAirFlowSensorError												: STRING	:= 'Air flow sensor error (R1 FT01)';
	gsBoilerError														: STRING	:= 'Boiler error';
	gsInletLineTempSensorError											: STRING	:= 'Inlet line temperature sensor error (TT06)';
	gsClampExtendError													: STRING	:= 'Clamp extend error';
	gsClampRetractError													: STRING	:= 'Clamp retract error';
	gsCondensateFlowSensorError											: STRING	:= 'Condensate flow sensor error (FT-04)';
	gsCondenserKODrainageError											: STRING	:= 'Condensate knockout drainage error';
	gsCondensateLslError												: STRING	:= 'Condensate low limit switch error (LS-01)';
	gsCondenserFlowSensorError											: STRING	:= 'Condenser flow sensor error (FT08)';
	gsCondensateProductDrainError										: STRING	:= 'Module product/cooling line not draining';	
	gsCondensateValveError												: STRING	:= 'Condensate valve error (XV06)';
	gsDeadAirInletValveError											: STRING	:= 'Dead air inlet valve error (XV10)';
	gsDeadAirLinePressureError											: STRING	:= 'Dead air line failed to reach desired pressure';
	gsDeadAirValveError													: STRING	:= 'Dead air valve error (XV04)';
	gsDesiredCycleCountError											: STRING	:= 'Desired cycle count error';
	gsDesorptionHighSteamLineTemp										: STRING	:= 'Desorption - High steam line temperature';
	gsDesorptionPurgeLinePressureError									: STRING	:= 'Desorption - Unable to purge';
	gsDoorClampsExtendedError											: STRING	:= 'Door clamps extended';
	gsDoorsNotClosedError												: STRING	:= 'Door not closed error';
	gsDoorsNotOpenError													: STRING	:= 'Door not open error';
	gsFanDiffPresSensorError											: STRING	:= 'Fan differential pressure sensor error (PDT-03)';
	gsFilterDiffPresSensorError											: STRING	:= 'Filter differential pressure sensor error (PDT-01)';
	gsFlowCalibrationDiffPresSensorError								: STRING	:= 'Flow calibration differential pressure sensor error (PDT04)';
	gsHighTempCountError												: STRING	:= 'High Temp Count Error';
	gsInletAirHighTempCountError										: STRING	:= 'Inlet air high temperature count error';
    gsInletCO2SensorError												: STRING	:= 'Inlet CO2 sensor error (AT-01)';
    gsInletH2OSensorError												: STRING	:= 'Inlet H2O sensor error (AT-02)';
	gsInletDoorClampsExtendedError										: STRING	:= 'Inlet door clamps extended error (XV01)'; 
	gsInletDoorClampsRetractedError										: STRING	:= 'Inlet door clamps retracted error (XV01)'; 
	gsNoReactorSetsSelected												: STRING	:= 'No reactor sets selected';
    gsOutletCO2SensorError												: STRING	:= 'Outlet CO2 sensor error (AT-03)';
    gsOutletH2OSensorError												: STRING	:= 'Outlet H2O sensor error (AT-04)';
	gsOutletDoorClampsExtendedError										: STRING	:= 'Outlet door clamps extended error (XV03)'; 
	gsOutletDoorClampsRetractedError									: STRING	:= 'Outlet door clamps retracted error (XV03)'; 
	gsProductVacuumTempSensorError										: STRING	:= 'Product vacuum temperature sensor error (TT-03)';
	gsProductTempSensorError											: STRING	:= 'Product temperature sensor error (TT-02)';
	gsProductCondensateDrainError										: STRING	:= 'Product condensate not draining';
	gsProductCondensateDrainValveError									: STRING	:= 'Product condensate drain valve error';
	gsProductCondensateDrumLshError										: STRING	:= 'Product condensate drum high limit switch error (LS-02)';
	gsProductCondensateDrumLslError										: STRING	:= 'Product condensate drum low limit switch error (LS-01)';
	gsProductLineAmbientValveError										: STRING	:= 'Product line ambient valve error (XV11)';
	gsProductLinePressureSensorError									: STRING	:= 'Product line pressure sensor error (PT02)';
	gsProductLineTempTooLowError										: string	:= 'Product line temperature too low';
	gsProductOutletH2oSensorError										: STRING	:= 'Product outlet h2o sensor error (AT-02B)';
	gsProductOutletCo2SensorError										: STRING	:= 'Product outlet co2 sensor error (AT-02A)';
	gsProductOutletFlowSensorError										: STRING	:= 'Product outlet flow sensor error (FT02)';
	gsProductVacuumBackfeedValveError									: STRING	:= 'Product vacuum backfeed valve error (PCV-01)';
	gsProductVacuumOutletIsoValveError									: STRING	:= 'Product vacuum outlet isolation valve error (XV-05)';
	gsProductVacuumPumpIsoValveError									: STRING	:= 'Product vacuum pump isolation valve error (XV-03)';
	gsProductVacuumPresSensorError										: STRING	:= 'Product vacuum pressure sensor error (PT-05)';
	gsPurgeProductLinePresLowError										: STRING	:= 'Purge product line pressure low error';
	gsProductIsoValveError												: STRING	:= 'Product isolation valve error (XV05)';
	gsProductLinePresSensorError										: STRING	:= 'Product line pressure sensor error (PT-02)';
	gsProductLineTempSensorError										: STRING	:= 'Product line temperature sensor error (TT-01)';
	gsReactorCondensateFlowSensorError									: STRING	:= 'Reactor condensate flow sensor error (FT02)';
	gsReactorDrainError													: STRING	:= 'Reactor not draining';	
	gsReactorDoorClosingError											: STRING	:= 'Failed to close door valves';									// Complete
	gsReactorDoorOpeningError											: STRING	:= 'Failed to open door valves';									// Complete
	gsReactorsAtAmbientPressure											: STRING	:= 'Reactors at ambient pressure';
	gsReactorPressureAboveAcceptableLevelError							: STRING	:= 'Reactor pressure above acceptable level';
	gsReactorPressureAboveDesiredLevelError								: STRING	:= 'Reactor pressure above desired level';
	gsReactorPressureTooHighError										: STRING	:= 'Reactor pressure too high error';
	gsReactorPressureTooLowError										: STRING	:= 'Reactor pressure too low error';
	gsReactorPresSensorError											: STRING	:= 'Reactor pressure sensor error (PT01)';
	gsReactorSetFailedToPressurizeError									: STRING	:= 'Reactor set failed to pressurize';
	gsReactorValvesNotClosedError										: STRING	:= 'Reactor valves are not closed';
	gsRepressurizationError												: STRING	:= 'Repressurization error';	
	gsSorbentDiffPresSensorError										: STRING	:= 'Sorbent differential pressure sensor error (PDT-02)';
	gsSorbentTemperatureError											: STRING	:= 'Sorbent temperatures above safe temperature';
	gsSteamBypassMinFlowRateError										: STRING	:= 'Steam bypass minimum flow rate error';
	gsSteamControlValveError											: STRING	:= 'Steam control valve error (PCV-01)';
	gsSteamIsoValveError												: STRING	:= 'Steam isolation valve error (XV07)';
	gsSteamFailedToPressurizeReactorError								: STRING	:= 'Steam failed to pressurize reactor to purge pressure';
	gsSteamFlowSensorError												: STRING	:= 'Steam flow sensor error (FT05)';
	gsSteamBypassValveError												: STRING	:= 'Steam bypass valve error (XV08)';
	gsSteamPressureHighError											: STRING	:= 'High steam pressure';
	gsSteamPressureLowError												: STRING	:= 'Low steam pressure';
	gsSteamTemperatureLowError											: STRING	:= 'Low steam temperature';
	gsSteamLinePresSensorError											: STRING	:= 'Steam line pressure sensor error (PT07)';
	gsSteamFlowConrolValveError											: STRING	:= 'Steam flow control valve error (PCV02)';
	gsSteamFlowTooLowError												: STRING	:= 'Steam flow too low error';
	gsSteamWaterTankLevelSensorError									: STRING	:= 'Steam water tank level sensor error (LT01)';
	gsTapWaterFeedFlowSensorError										: STRING	:= 'Tap water feed flow sensor error (FT05)';
	gsUnableToEvacuateLinesError										: STRING	:= 'Unable to evacuate lines in time';
	gsVacuumPressureControlValveError									: STRING	:= 'Vacuum pressure control valve error (PCV01)';
	gsVacuumCoolingLoopFlowError										: STRING	:= 'Vacuum cooling loop flow error';
	gsVacuumCoolingLoopTempError										: STRING	:= 'Vacuum cooling loop temperature error';
	gsVacuumCoolingUnacceptableError									: STRING	:= 'Vacuum cooling temperature reached was unacceptable';
	gsVacuumCoolingAcceptableButNotIdealError							: STRING	:= 'Vacuum cooling temperature reached was acceptable but not ideal';
	gsVacuumLinePressureHighError										: STRING	:= 'Vacuum line pressure high';
	gsVacuumPumpWaterFlowSensorError									: STRING	:= 'Vacuum pump water flow sensor error (FT07)';
	gsVacuumPumpWaterTemp1SensorError									: STRING	:= 'Vacuum pump water temperature 1 sensor error (TT10)';
	gsVacuumPressureUnacceptableError									: STRING	:= 'Vacuum pressure reached was unacceptable';
	gsVacuumPressureAcceptableBotNotIdealError							: STRING	:= 'Vacuum pressure reached was acceptable but not ideal';
	gsVacuumPumpBypassValveError										: STRING	:= 'Vacuum pump bypass valve error (XV04)';
	gsVacuumPumpInletValveError											: STRING	:= 'Vacuum pump inlet valve error (XV03)';
	gsVacuumSeparatorLevelSensorError									: STRING	:= 'Vacuum separator level sensor error (LT02)';
	gsVacuumSeparatorDrainError											: STRING	:= 'Vacuum separator drain error';
	gsVacuumSeparatorFillError											: STRING	:= 'Vacuum separator fill error';
	gsWarmupNotRunError													: STRING	:= 'Warmup has not run';
	gsWeatherHumiditySensorError										: STRING	:= 'Weather humidity sensor error (AT-07)';
	gsWeatherPresureSensorError											: STRING	:= 'Weather pressure sensor error (PT-09)';
	gsWaterScale1SensorError											: STRING	:= 'Water Scale 1 sensor error (WI-01)';
	gsWaterScale2SensorError											: STRING	:= 'Water Scale 2 sensor error (WI-02)';
	gsWaterScale3SensorError											: STRING	:= 'Water Scale 3 sensor error (WI-03)';
	
	gsMessageTBD			: STRING	:= 'TBD';
	gsAdsorptionCo2LowCheck												: STRING	:= 'Check inlet co2 sensor';
	gsCheckOperation													: STRING	:= 'Check sensor operation';
	gsExtraRepressurizationTimeAllowed									: STRING	:= 'Extra repressurization time allowed';
	gsPressureDropTestCannotRun											: STRING	:= 'Pressure drop test cannot run';
	gsProcessCannotContinue												: STRING	:= 'Process cannot continue';
	gsProcessCannotRun													: STRING	:= 'Process cannot run';
	gsProcessCannotRunAdsorptionWillContinue							: STRING	:= 'Process cannot run - Adsorption will continue';
	gsProcessStopsAtEOA													: STRING	:= 'Process will stop at end of Adsorption';
	gsProcessStopsAtEOC													: STRING	:= 'Process will stop at end of current cycle';
	gsProcessWillContinue												: STRING	:= 'Process will continue';
	gsProcessComplete													: STRING	:= 'Process complete';
	gsProcessRestart													: STRING	:= 'Process will attempt to restart on next cycle';
	gsReactorIsUnderVacuum												: STRING	:= 'Reactor is under vacuum';
	gsReactorSetCannotRun												: STRING	:= 'Reactor set cannot run';
	gsReactorSetWillContinue											: STRING	:= 'Reactor set will continue';
	gsReactorSetWillPause												: STRING	:= 'Reactor set will pause';
	gsReactorSetWillStop												: STRING	:= 'Reactor set will stop';
	gsReactorSetWillStopAtEndOfCycle									: STRING	:= 'Reactor set will stop at end of cycle';
	gsReactorSetsInEvacuationWillContinue								: STRING	:= 'Reactor sets in Evacuation will finish, others will stop';
	gsReactorSetWillStopEvacWillFinishOthersWillCompleteCycle			: STRING	:= 'Reactor set will stop, Evacuation will finish, others will complete cycle';
	gsRunWarmup															: STRING	:= 'Run warm up';													
	gsSorbentDamaged													: STRING	:= 'Sorbent damaged';
	gsSteamBypassWillContinueWOAdsorption								: STRING	:= 'Steam Bypass will continue without Adsorption';
	gsSystemCannotRun													: STRING	:= 'System cannot run';
	gsSystemWillStop													: STRING	:= 'System will stop';
	gsSystemWillStopAfterDesorption										: STRING	:= 'System will stop after Desorption';
	gsUnableToCloseDoors												: STRING	:= 'Unable to close doors';
	gsUnableToEvacuateReactorSet										: STRING	:= 'Unable to evacuate reactor set';
	gsUserProcessRestart												: STRING	:= 'User must restart for process to continue';
	gsWarmupWillContinue												: STRING	:= 'Warm up will continue';													
	gsWarmupWillContinueWOAdsorption									: STRING	:= 'Warm up will continue without Adsorption';
	gsWarning															: STRING	:= 'Waring - Procees could be affected';

END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>