<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <GVL Name="P0_Global_Variables" Id="{4557a8c3-046b-4b11-be20-54f3797f9da8}">
    <Declaration><![CDATA[// Theseus - Global_Variables
// Rev 1.0 - October 2, 2024

VAR_GLOBAL

	gbRS01TestError														: BOOL;
	gbRS02TestError														: BOOL;
	gbRS03TestError														: BOOL;
	
	gbDrainageOn														: BOOL;
	gbCondenserKODrainageOn												: BOOL;
	gbCondensateValve													: BOOL;
	
	gbGasketsActivated													: BOOL;
	gbFirstEvacuation													: BOOL;
	giEvacuationCounter													: INT;

	gsCycleMode															: STRING;
	gsCycleStage														: STRING;
	gsM01RS01CycleStage													: STRING;
	gsM01RS02CycleStage													: STRING;
	gsM01RS03CycleStage													: STRING;
	
	gbRepresValves														: BOOL;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>